# alice_bp

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alice_skill/: admin.py  alice_serializers.py  apps.py  decorators.py  filters.py  helpers.py  messages.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py  wordlist.py
alice_skill/handlers/: base.py  common.py  last_measurement.py  link_account.py  record_pressure.py  unparsed.py
alice_skill/migrations/: 0001_initial.py  0002_add_user_id_to_bloodpressuremeasurement.py  0002_user_aliceuser.py  0003_replace_user_id_with_user_fk.py  0003_user_linktoken.py  0004_accountlinktoken_and_more.py  0004_add_performance_indexes.py  0005_alter_bloodpressuremeasurement_measured_at.py  0005_alter_telegram_user_id_to_hashed.py  0006_alter_accountlinktoken_telegram_user_id_and_more.py  0006_user_timezone.py  0007_remove_accountlinktoken_token_word_count.py
alice_skill/tests/: __init__.py  factories.py  test_alice_handlers.py  test_alice_link.py  test_api.py  test_handlers.py  test_helpers.py  test_linking_flow.py  test_management_commands.py  (+7 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
pyanywhere_bg/: apps.py  urls.py  utils.py  views.py
tgbot_bp/: .env.dist  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
tgbot_bp/infrastructure/bp_api/: api.py  base.py
tgbot_bp/tests/: conftest.py  test_api_client.py  test_callbacks.py  test_error_handler.py  test_getters.py  test_unlink_handler.py  test_user_handlers.py  test_webhook.py
tgbot_bp/tgbot/core/: config.py  loader.py  logger.py
tgbot_bp/tgbot/dialogs/: __init__.py  cache_utils.py  callbacks.py  getters.py  states.py  user_dialogs.py
tgbot_bp/tgbot/handlers/: __init__.py  admin.py  echo.py  error.py  user.py
tgbot_bp/tgbot/keyboards/: dialog.py  reply.py
tgbot_bp/tgbot/messages/: bot_msg.py  dialogs_msg.py  handlers_msg.py  keyboards_msg.py
tgbot_bp/tgbot/middlewares/: auth.py  config.py
tgbot_bp/tgbot/misc/: notify_admins.py  setting_comands.py
tgbot_bp/tgbot/services/: broadcaster.py  django_api.py  utils.py
(+38 files in other folders)
