[project]
name = "alice-bp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp-socks>=0.10.1",
    "django>=5.1.3",
    "djangorestframework>=3.16.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
]

[tool.uv.workspace]
members = [
    "tgbot_bp",
]
