[project]
name = "tgbot-bp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.0<4.0",
    "aiogram-dialog>=2.4.0",
    "betterlogging>=1.0.0",
    "environs>=14.3.0",
    "aiohttp>=3.9.0",
    "backoff>=2.2.1",
    "ujson>=5.11.0",
]
